--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,22 +4,22 @@
       <h5>ZenduitForms</h5>
     </div>
     <div class="col-7 navItemsParent">
-    <a target="" href="/forms" title="Forms" class="navlinksstyle"> 
+    <a target="" href="#/forms" title="Forms" class="navlinksstyle"> 
       <span><i class="bi bi-list nav-icon-style"></i>Forms</span></a>
-    <a target="" href="/customers" title="Customers" class="navlinksstyle"> 
+    <a target="" href="#/customers" title="Customers" class="navlinksstyle"> 
       <span><i class="bi bi-people-fill nav-icon-style"></i>Customers</span>
     </a>
-    <a target=""  href="/submissions" title="Submissions" class="navlinksstyle"> 
+    <a target=""  href="#/submissions" title="Submissions" class="navlinksstyle"> 
       <span><i class="bi bi-subtract nav-icon-style"></i>Submissions</span>
     </a>
-    <a target="" href="/history" title="History" class="navlinksstyle"> 
+    <a target="" href="#/history" title="History" class="navlinksstyle"> 
       <span><i class="bi bi-clock-history nav-icon-style"></i>History</span>
      </a>
-    <a target="" href="/reports" title="Report" class="navlinksstyle"> 
+    <a target="" href="#/reports" title="Report" class="navlinksstyle"> 
       <span><i class="bi bi-reception-2 nav-icon-style"></i>Report</span>
     </a>
        
-    <a target="" href="/workflow" title="Workflow" class="navlinksstyle"> 
+    <a target="" href="#/workflow" title="Workflow" class="navlinksstyle"> 
       <span><i class="bi bi-reception-2 nav-icon-style"></i> Workflow</span>
     </a>
 
